build_logs.txt
> Task :compileJava FAILED
C:\Users\olik\Desktop\Hytale\Plugins\HytalePortal\src\main\java\dev\jsemolik\hytaleportal\portal\PortalVisualizer.java:193: error: method breakBlock in interface IChunkAccessorSync<WorldChunk> cannot be applied to given types;
                            world.breakBlock(pos.x, pos.y, pos.z, 0, 0);
                                 ^
  required: int,int,int,int
  found:    int,int,int,int,int
  reason: actual and formal argument lists differ in length
  where WorldChunk is a type-variable:
    WorldChunk extends BlockAccessor declared in interface IChunkAccessorSync
Note: C:\Users\olik\Desktop\Hytale\Plugins\HytalePortal\src\main\java\dev\jsemolik\hytaleportal\listeners\PortalGunListener.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

